--- a/index.html
+++ b/index.html
@@ -29,6 +29,59 @@
         </div>
     </div>
     <!-- Quiz Box -->
-    
+        <div class="quiz-box">
+            <header>
+                <div class="title">Quiz Musical</div>
+                <div class="timer">
+                    <div class="time-text">Tempo Restante:</div>
+                    <div class="timer-cou">15</div>
+                    <div class="timer-sec">Seg</div>
+                </div>
+            </header>
+            <section>
+                <div class="que-text">
+                    <span>O que é harmonia?</span>
+                </div>
+                <div class="option-list">
+                    <div class="option">
+                        <span>3 ou mais notas tocadas juntas</span>
+                        <div class="icon tick"><i class="fas fa-check"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>2 ou mais notas tocadas juntas</span>
+                        <div class="icon cross"><i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>1 ou mais notas tocadas juntas</span>
+                    </div>
+                    <div class="option">
+                        <span>Nenhuma das respostas</span>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Quiz Box Footer -->
+            <footer>
+                <div class="total-que">
+                    <span><p>2</p>de<p>10</p>Questões</span>
+                </div>
+                <button class="next-btn">Próxima Questão</button>
+            </footer>
+        </div>
+
+        <!-- Result Box -->
+        <div class="result-box">
+            <div class="icon">
+                <i class="fas fa-music"></i>
+            </div>
+            <div class="complete-text">Você finalizou o Quiz Musical!</div>
+            <div class="score-text">
+                <span>Infelizmente, você acertou somente <p>2</p> de <p>10</p> questões.</span>
+            </div>
+            <div class="buttons">
+                <button class="quit">Sair</button>
+                <button class="restart">Refazer</button>
+            </div>
+        </div>
 </body>
 </html>
