--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="buttons">
             <button class="quit">Sair</button>
-            <button class="restart">Começar</button>
+            <button class="restart">Continuar</button>
         </div>
     </div>
     <!-- Quiz Box -->
@@ -40,7 +40,7 @@
             </header>
             <section>
                 <div class="que-text">
-                    <span>O que é harmonia?</span>
+                    <!-- <span>O que é harmonia?</span> -->
                 </div>
                 <div class="option-list">
                     <div class="option">
@@ -83,5 +83,8 @@
                 <button class="restart">Refazer</button>
             </div>
         </div>
+
+        <script src="questions.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
