JavaScript Começando a rodar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <!-- <span>O que é harmonia?</span> -->
                 </div>
                 <div class="option-list">
-                    <div class="option">
+                    <!-- <div class="option">
                         <span>3 ou mais notas tocadas juntas</span>
                         <div class="icon tick"><i class="fas fa-check"></i></div>
                     </div>
@@ -56,14 +56,14 @@
                     </div>
                     <div class="option">
                         <span>Nenhuma das respostas</span>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
             <!-- Quiz Box Footer -->
             <footer>
                 <div class="total-que">
-                    <span><p>2</p>de<p>10</p>Questões</span>
+                    <!-- <span><p>2</p>de<p>10</p>Questões</span> -->
                 </div>
                 <button class="next-btn">Próxima Questão</button>
             </footer>
