--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div class="timer-cou">15</div>
                     <div class="timer-sec">Seg</div>
                 </div>
+                <div class="timeline"></div>
             </header>
             <section>
                 <div class="que-text">
@@ -76,7 +77,7 @@
             </div>
             <div class="complete-text">Você finalizou o Quiz Musical!</div>
             <div class="score-text">
-                <span>Infelizmente, você acertou somente <p>2</p> de <p>10</p> questões.</span>
+                <!-- <span>Infelizmente, você acertou somente <p>2</p> de <p>10</p> questões.</span> -->
             </div>
             <div class="buttons">
                 <button class="quit">Sair</button>
